# google-agent-dev-toolkit

./: .env.example  README.md  pyproject.toml  requirements.txt  test_bq_agent.py  visual_builder_prompt
adk_docs_notebooks/: day-0-troubleshooting-and-faqs.ipynb
bq_data_analyst_agent/: agent.py
bq_test_data_generation/: generate_market_data.py  requirements_market_data.txt
bq_test_generation/: stock_market_data_10000_rows.csv  test_bq_analyst_with_data.py
deployment/: deployment.py  test_agent_deployment.py  test_curl_example.sh  test_deployment.py
financial_advisor_agent/: agent.py
my_vizteaching_assistant/: research_coordinator.yaml  teaching_student_agent.yaml
my_vizteaching_assistant/tmp/my_vizteaching_assistant/: research_sub_agent_1.yaml  research_sub_agent_2.yaml  root_agent.yaml
teaching_assistant_agent/: agent.py  prompt.py
